[gd_scene load_steps=6 format=3 uid="uid://c2jeasfji3pst"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_wg6ih"]
[ext_resource type="Texture2D" uid="uid://5ikqsvc0nckq" path="res://Images/Background_menu.png" id="2_rtguc"]
[ext_resource type="FontFile" uid="uid://dm3ckdb3jwlhq" path="res://Images/Blinking Free.ttf" id="3_cpvyt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j242r"]
texture = ExtResource("2_rtguc")
modulate_color = Color(0.505882, 0.505882, 0.517647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2qkb"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(2.88785e-07, 0.960246, 0.377021, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.129412)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -323.0
offset_right = 576.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wg6ih")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_j242r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -59.5
offset_right = 165.0
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="btnTutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 7
theme_override_styles/normal = SubResource("StyleBoxFlat_o2qkb")
text = "Tutorial
"

[node name="btnExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 7
theme_override_styles/normal = SubResource("StyleBoxFlat_o2qkb")
text = "Spiel Verlassen"

[node name="btnStartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 7
theme_override_styles/normal = SubResource("StyleBoxFlat_o2qkb")
text = "Spiel Starten
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -227.5
offset_right = 99.0
offset_bottom = -156.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cpvyt")
theme_override_font_sizes/font_size = 108
text = "Speedmaster"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/btnTutorial" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/btnExit" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/btnStartGame" to="." method="_on_btn_start_game_pressed"]
